Fixed visibility/height issue

--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -2,6 +2,7 @@
 	&__panel {
 		height: 0;
 		opacity: 0;
+		overflow: hidden;
 		transition: all 0.2s ease-out;
 		visibility: hidden;
 	}
